# Fundamentos_NLP_nltk_y_Spacy

./: README.md  pyproject.toml
Codigos/: Estadisticas del lenguaje.ipynb  Tokenizacion con NLTK.ipynb  primeros pasos NLP con NLTK.ipynb  proyecto.ipynb  wordnet.ipynb
