[tool.poetry]
name = "curso fundamentos de nlp platzi"
version = "0.1.0"
description = ""
authors = ["juan c higuera c <juancahica@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"
nltk = "^3.9.1"
spacy = "^3.8.3"
matplotlib = "3.8"
ipykernel = "^6.29.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
